--- a/genre_classification/config.yaml
+++ b/genre_classification/config.yaml
@@ -1,5 +1,5 @@
 main:
-  project_name: exercise_14
+  project_name: end_to_end_pipeline_01
   experiment_name: dev
   execute_steps:
     - download
@@ -13,8 +13,8 @@ main:
   # pseudo-random operations
   random_seed: 42
 data:
-  file_url: "https://github.com/udacity/nd0821-c2-build-model-workflow-exercises/blob/master/lesson-2-data-exploration-and-preparation/exercises/exercise_4/starter/genres_mod.parquet?raw=true"
-  reference_dataset: "exercise_14/preprocessed_data.csv:latest"
+  file_url: "https://github.com/avallarino-ar/MLOps_lab/blob/main/genre_classification/data/genres_mod.parquet?raw=true"
+  reference_dataset: "end_to_end_pipeline/preprocessed_data.csv:latest"
   # Threshold for Kolomorov-Smirnov test
   ks_alpha: 0.05
   test_size: 0.3
